k8s/misc/postgres.yaml
# Kubernetes API version
apiVersion: apps/v1
# Deployment object
kind: Deployment
metadata:
  # The name of the Deployment
  name: postgres
  namespace: ingress-nginx
spec:
  # Replicas for this Deployment
  replicas: 2
  selector:
    # labels the pods
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        # The label the pods created from the pod template should have
        app: postgres
    spec:
      containers:
        # The container name to execute pods
        - name: postgres
          # pull postgresimage from docker hub
          image: postgres
          ports:
            # Assign ports to expose container
            - containerPort: 5432
          resources:
            requests:
              memory: '2048Mi'
              cpu: '0.5'
            limits:
              memory: '4096Mi'
              cpu: '4'
          volumeMounts:
            # The volume mounts  for the container
            - mountPath: /var/lib/postgres/data
              name: db-data
      # Volumes attached to the pod
      volumes:
        - name: db-data
          persistentVolumeClaim:
            # reference the PersistentVolumeClaim
            claimName: db-persistent-volume-claim
---
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: postgres
  labels:
    app: postgres
  namespace: ingress-nginx
spec:
  # Choose how to expose your service
  type: ClusterIP
  ports:
    # The port number to expose the service
    - port: 5432
  # Pod to route service traffic  
  selector:
    app: postgres
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - pg.readless.ai
      secretName: tls-pg.readless.ai
  rules:
    - host: pg.readless.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
